--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="1115.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="1115.0" style="-fx-background-color: Gray;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.LoginController">
    <left>
       <VBox prefHeight="200.0" prefWidth="635.0" BorderPane.alignment="CENTER">
          <children>
@@ -45,14 +46,20 @@
                   </Label>
                </children>
             </VBox>
-            <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="264.0" prefWidth="633.0" spacing="25.0">
+            <Separator prefHeight="0.0" prefWidth="557.0" />
+            <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="331.0" prefWidth="634.0" spacing="25.0">
                <padding>
                   <Insets left="30.0" right="30.0" />
                </padding>
                <children>
+                  <Label alignment="CENTER" prefHeight="18.0" prefWidth="685.0" text="Wellcome :)">
+                     <font>
+                        <Font name="Bell MT Bold" size="36.0" />
+                     </font>
+                  </Label>
                   <HBox prefHeight="39.0" prefWidth="452.0">
                      <children>
-                        <Label prefHeight="39.0" prefWidth="125.0" text="ID">
+                        <Label prefHeight="41.0" prefWidth="125.0" text="ID ">
                            <font>
                               <Font name="Bell MT" size="30.0" />
                            </font>
@@ -60,7 +67,7 @@
                               <Insets left="10.0" />
                            </padding>
                         </Label>
-                        <TextField prefHeight="36.0" prefWidth="320.0" />
+                        <TextField fx:id="idTextField" prefHeight="36.0" prefWidth="320.0" />
                      </children>
                      <opaqueInsets>
                         <Insets />
@@ -73,15 +80,56 @@
                               <Font name="Bell MT" size="30.0" />
                            </font>
                         </Label>
-                        <TextField prefHeight="41.0" prefWidth="319.0" />
+                        <TextField fx:id="passwordTextField" prefHeight="41.0" prefWidth="319.0" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#signUp" prefHeight="39.0" prefWidth="86.0" style="-fx-background-color: Blue;" text="SignUp" textFill="WHITE">
+                           <HBox.margin>
+                              <Insets right="150.0" />
+                           </HBox.margin>
+                           <font>
+                              <Font name="Bell MT" size="18.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#forgetPassword" prefHeight="39.0" prefWidth="174.0" style="-fx-background-color: Yellow;" text="Forget Password ?">
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                           <font>
+                              <Font name="Bell MT Bold" size="18.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#logIn" prefHeight="39.0" prefWidth="80.0" style="-fx-background-color: Green;" text="LogIn">
+                           <HBox.margin>
+                              <Insets left="10.0" />
+                           </HBox.margin>
+                           <font>
+                              <Font name="Bell MT Bold" size="18.0" />
+                           </font>
+                        </Button>
                      </children>
                   </HBox>
                </children>
                <VBox.margin>
-                  <Insets top="50.0" />
+                  <Insets />
                </VBox.margin>
             </VBox>
+            <Separator prefWidth="200.0" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#exit" prefHeight="36.0" prefWidth="73.0" style="-fx-background-color: Red;" text="Exit" textAlignment="CENTER">
+                     <font>
+                        <Font name="Bell MT Bold" size="18.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
          </children>
       </VBox>
    </left>
+   <right>
+      <VBox fx:id="right" prefHeight="735.0" prefWidth="510.0" style="-fx-background-color: Black;" BorderPane.alignment="CENTER" />
+   </right>
 </BorderPane>
