--- a/src/main/resources/fxml/ForgotPassword.fxml
+++ b/src/main/resources/fxml/ForgotPassword.fxml
@@ -1,16 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="510.0" style="-fx-background-color: Orange;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="510.0" spacing="26.0" style="-fx-background-color: Orange;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ForgotPasswordController">
    <children>
-      <Label text="Forgot Password">
+      <Label alignment="TOP_CENTER" style="-fx-border-color: Black;" text="Forgot PASSWORD">
          <font>
-            <Font name="Bell MT" size="64.0" />
+            <Font name="Bell MT Bold" size="48.0" />
          </font>
+         <VBox.margin>
+            <Insets top="20.0" />
+         </VBox.margin>
       </Label>
+      <HBox prefHeight="53.0" prefWidth="510.0" />
+      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
+         <children>
+            <Label prefHeight="36.0" prefWidth="348.0" text="Sequrity Question :">
+               <font>
+                  <Font name="Bell MT Bold" size="30.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" top="3.0" />
+               </HBox.margin>
+            </Label>
+         </children>
+      </HBox>
+      <HBox fx:id="questionTextArea" alignment="CENTER" prefHeight="40.0" prefWidth="510.0" spacing="65.0">
+         <children>
+            <TextArea prefHeight="40.0" prefWidth="483.0" />
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
+         <children>
+            <Label text="Answer :">
+               <font>
+                  <Font name="Bell MT Bold" size="30.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="answer" prefHeight="40.0" prefWidth="305.0">
+               <HBox.margin>
+                  <Insets left="48.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_RIGHT" prefHeight="48.0" prefWidth="510.0" spacing="281.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#Check" prefHeight="42.0" prefWidth="85.0" style="-fx-background-color: Green; -fx-background-radius: 50;" text="Check">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <HBox.margin>
+                  <Insets right="13.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
+         <children>
+            <Label fx:id="NewPasswordLabel" text="New Password :">
+               <font>
+                  <Font name="Bell MT Bold" size="23.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="newPasswordTextField" prefHeight="40.0" prefWidth="305.0">
+               <HBox.margin>
+                  <Insets left="5.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
+         <children>
+            <Label fx:id="checkPasswordLabel" text="Check Password :">
+               <font>
+                  <Font name="Bell MT Bold" size="20.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="checkPasswordTextField" prefHeight="40.0" prefWidth="305.0">
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_RIGHT" prefHeight="48.0" prefWidth="510.0" spacing="281.0">
+         <children>
+            <Button fx:id="SignInButton" mnemonicParsing="false" onAction="#SignIn" prefHeight="42.0" prefWidth="85.0" style="-fx-background-color: Green; -fx-background-radius: 50;" text="Sign In">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <HBox.margin>
+                  <Insets right="13.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
+      <HBox alignment="BOTTOM_LEFT" prefHeight="20.0" prefWidth="510.0">
+         <children>
+            <Button alignment="CENTER" contentDisplay="BOTTOM" mnemonicParsing="false" onAction="#Back" prefHeight="42.0" prefWidth="85.0" style="-fx-background-color: Red; -fx-background-radius: 30;" text="Back" textAlignment="CENTER">
+               <font>
+                  <Font name="Bell MT" size="18.0" />
+               </font>
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
    </children>
 </VBox>
