--- a/src/main/resources/fxml/SignUp.fxml
+++ b/src/main/resources/fxml/SignUp.fxml
@@ -1,16 +1,158 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="510.0" style="-fx-background-color: pink;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="510.0" spacing="26.0" style="-fx-background-color: pink;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.SignUpController">
    <children>
-      <Label style="-fx-border-color: Black;" text="Sign Up">
+      <Label alignment="TOP_CENTER" style="-fx-border-color: Black;" text="Sign Up">
          <font>
-            <Font name="Bell MT" size="96.0" />
+            <Font name="Bell MT" size="64.0" />
          </font>
+         <VBox.margin>
+            <Insets top="20.0" />
+         </VBox.margin>
       </Label>
+      <HBox prefHeight="53.0" prefWidth="510.0" />
+      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
+         <children>
+            <Label text="User Name :">
+               <font>
+                  <Font name="Bell MT Bold" size="30.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="UserName" prefHeight="40.0" prefWidth="307.0" style="-fx-background-radius: 50;" />
+         </children>
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="65.0">
+         <children>
+            <Label text="ID :">
+               <font>
+                  <Font name="Bell MT Bold" size="30.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="ID" prefHeight="40.0" prefWidth="305.0">
+               <HBox.margin>
+                  <Insets left="57.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
+         <children>
+            <Label text="Password :">
+               <font>
+                  <Font name="Bell MT Bold" size="30.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="password1" prefHeight="40.0" prefWidth="305.0">
+               <HBox.margin>
+                  <Insets left="21.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
+         <children>
+            <Label text="Check Password :">
+               <font>
+                  <Font name="Bell MT Bold" size="20.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="checkPassword" prefHeight="40.0" prefWidth="305.0">
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0">
+         <children>
+            <Label text="Password Hint :">
+               <font>
+                  <Font name="Bell MT Bold" size="24.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="passwordHint" prefHeight="40.0" prefWidth="305.0">
+               <HBox.margin>
+                  <Insets left="5.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0">
+         <children>
+            <Label text="Security Question :">
+               <font>
+                  <Font name="Bell MT Bold" size="20.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="question" prefHeight="40.0" prefWidth="305.0">
+               <HBox.margin>
+                  <Insets left="4.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="510.0" spacing="10.0">
+         <children>
+            <Label text="Answer :">
+               <font>
+                  <Font name="Bell MT Bold" size="30.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="answer" prefHeight="40.0" prefWidth="305.0">
+               <HBox.margin>
+                  <Insets left="48.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="281.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#Back" prefHeight="42.0" prefWidth="85.0" style="-fx-background-color: Red; -fx-background-radius: 30;" text="Back">
+               <font>
+                  <Font name="Bell MT" size="18.0" />
+               </font>
+               <HBox.margin>
+                  <Insets bottom="6.0" top="62.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#SignUp" prefHeight="42.0" prefWidth="85.0" style="-fx-background-color: Green; -fx-background-radius: 50;" text="SignUp">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+         </children>
+      </HBox>
    </children>
 </VBox>
