--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -14,7 +14,7 @@
    <left>
       <VBox prefHeight="200.0" prefWidth="635.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="335.0" prefWidth="635.0" spacing="10.0">
+            <VBox alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="100.0" spacing="10.0">
                <padding>
                   <Insets left="100.0" top="40.0" />
                </padding>
@@ -45,9 +45,15 @@
                      </font>
                   </Label>
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </VBox>
-            <Separator prefHeight="0.0" prefWidth="557.0" />
-            <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="331.0" prefWidth="634.0" spacing="25.0">
+            <Separator maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="635.0">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin></Separator>
+            <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="100.0" spacing="25.0">
                <padding>
                   <Insets left="30.0" right="30.0" />
                </padding>
@@ -116,8 +122,11 @@
                   <Insets />
                </VBox.margin>
             </VBox>
-            <Separator prefWidth="200.0" />
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+            <Separator maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="635.0">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin></Separator>
+            <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="635.0">
                <children>
                   <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#exit" prefHeight="36.0" prefWidth="73.0" style="-fx-background-color: Red;" text="Exit" textAlignment="CENTER">
                      <font>
@@ -125,11 +134,24 @@
                      </font>
                   </Button>
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </HBox>
          </children>
       </VBox>
    </left>
    <right>
-      <VBox fx:id="right" prefHeight="735.0" prefWidth="510.0" style="-fx-background-color: Black;" BorderPane.alignment="CENTER" />
+      <VBox fx:id="right" prefHeight="735.0" prefWidth="510.0" style="-fx-background-color: Black;" BorderPane.alignment="CENTER">
+         <children>
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="736.0" prefWidth="510.4" VBox.vgrow="ALWAYS">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </VBox>
+         </children>
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin></VBox>
    </right>
 </BorderPane>
