try to fix login and forget password

--- a/src/main/resources/fxml/ForgotPassword.fxml
+++ b/src/main/resources/fxml/ForgotPassword.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane prefHeight="735.0" prefWidth="502.0" style="-fx-background-color: Orange;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ForgotPasswordController">
+<GridPane prefHeight="735.0" prefWidth="502.0" style="-fx-background-color: Orange;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ForgotPasswordController">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
    </columnConstraints>
@@ -63,9 +63,9 @@
                   </Label>
                </children>
             </HBox>
-            <HBox fx:id="questionTextArea" alignment="CENTER" prefHeight="40.0" prefWidth="510.0" spacing="65.0" GridPane.rowIndex="4">
+            <HBox alignment="CENTER" prefHeight="40.0" prefWidth="510.0" spacing="65.0" GridPane.rowIndex="4">
                <children>
-                  <TextArea prefHeight="47.0" prefWidth="530.0" style="-fx-background-color: Gray;">
+                  <TextArea fx:id="question" prefHeight="47.0" prefWidth="530.0" style="-fx-background-color: Gray;">
                      <HBox.margin>
                         <Insets left="20.0" right="20.0" />
                      </HBox.margin>
@@ -182,7 +182,7 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
                <children>
-                  <Label prefHeight="45.0" prefWidth="251.0" style="-fx-background-color: pink; -fx-border-color: Black;" text="Change Password">
+                  <Label fx:id="changePasswordLabel" prefHeight="45.0" prefWidth="251.0" style="-fx-background-color: pink; -fx-border-color: Black;" text="Change Password">
                      <font>
                         <Font name="Bell MT Italic" size="36.0" />
                      </font>
