--- a/src/main/resources/fxml/MainPage.fxml
+++ b/src/main/resources/fxml/MainPage.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="1115.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="Controllers.MainPageController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="1115.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MainPageController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -49,7 +49,7 @@
                                  <children>
                                     <ImageView fitHeight="60.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/home-2-line.png" />
+                                          <Image url="@../images/home.png" />
                                        </image>
                                        <cursor>
                                           <Cursor fx:constant="HAND" />
@@ -132,7 +132,7 @@
                                  <children>
                                     <ImageView fitHeight="60.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/home-2-line.png" />
+                                          <Image url="@../images/group.png" />
                                        </image>
                                        <cursor>
                                           <Cursor fx:constant="HAND" />
@@ -167,7 +167,7 @@
                                  <children>
                                     <ImageView fitHeight="60.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/home-2-line.png" />
+                                          <Image url="@../images/user.png" />
                                        </image>
                                        <cursor>
                                           <Cursor fx:constant="HAND" />
@@ -202,7 +202,7 @@
                                  <children>
                                     <ImageView fitHeight="60.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/home-2-line.png" />
+                                          <Image url="@../images/network.png" />
                                        </image>
                                        <cursor>
                                           <Cursor fx:constant="HAND" />
@@ -307,7 +307,7 @@
                                  <children>
                                     <ImageView fitHeight="60.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/home-2-line.png" />
+                                          <Image url="@../images/gear.png" />
                                        </image>
                                        <cursor>
                                           <Cursor fx:constant="HAND" />
@@ -342,7 +342,7 @@
                                  <children>
                                     <ImageView fitHeight="60.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/home-2-line.png" />
+                                          <Image url="@../images/bookmark.png" />
                                        </image>
                                        <cursor>
                                           <Cursor fx:constant="HAND" />
@@ -377,7 +377,7 @@
                                  <children>
                                     <ImageView fitHeight="60.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../images/home-2-line.png" />
+                                          <Image url="@../images/analyze_mail.png" />
                                        </image>
                                        <cursor>
                                           <Cursor fx:constant="HAND" />
@@ -416,7 +416,7 @@
                <children>
                   <ImageView fitHeight="36.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/home-2-line.png" />
+                        <Image url="@../images/public_access.png" />
                      </image>
                   </ImageView>
                   <Label text="LogOut" textFill="WHITE">
