--- a/src/main/resources/fxml/MainPage.fxml
+++ b/src/main/resources/fxml/MainPage.fxml
@@ -16,7 +16,7 @@
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="1115.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MainPageController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="80.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -419,7 +419,7 @@
                         <Image url="@../images/public_access.png" />
                      </image>
                   </ImageView>
-                  <Label text="LogOut" textFill="WHITE">
+                  <Label text="    LogOut" textFill="WHITE">
                      <font>
                         <Font name="Bell MT Bold" size="28.0" />
                      </font>
