--- a/src/main/resources/fxml/PvIcon.fxml
+++ b/src/main/resources/fxml/PvIcon.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="250.0" style="-fx-background-color: Green; -fx-background-radius: 50;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18">
+<GridPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="241.0" style="-fx-background-color: #000437; -fx-background-radius: 50;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="31.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -20,7 +20,7 @@
    <children>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Circle fill="DODGERBLUE" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
+            <Circle fill="#ffd662" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
          </children>
       </HBox>
       <GridPane GridPane.columnIndex="1">
@@ -33,7 +33,7 @@
           <RowConstraints minHeight="10.0" percentHeight="40.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label prefHeight="26.0" prefWidth="184.0" text="name">
+            <Label prefHeight="26.0" prefWidth="184.0" text="name" textFill="WHITE">
                <font>
                   <Font name="Bell MT Bold" size="28.0" />
                </font>
@@ -41,12 +41,12 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <Label prefHeight="18.0" prefWidth="225.0" text="Id :" GridPane.rowIndex="1">
+            <Label prefHeight="18.0" prefWidth="225.0" text="Id :" textFill="WHITE" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <Label prefHeight="43.0" prefWidth="184.0" text="Last Content" GridPane.rowIndex="2">
+            <Label prefHeight="43.0" prefWidth="184.0" text="Last Content" textFill="WHITE" GridPane.rowIndex="2">
                <font>
                   <Font name="Bell MT" size="17.0" />
                </font>
