--- a/src/main/resources/fxml/PvsPage.fxml
+++ b/src/main/resources/fxml/PvsPage.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<GridPane gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="892.0" style="-fx-background-color: #013dc4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PvPageController">
+<GridPane fx:id="totalGrid" gridLinesVisible="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="892.0" style="-fx-background-color: #013dc4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.PvPageController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="30.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -38,7 +38,7 @@
          <children>
             <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="446.0" style="-fx-background-color: purple;" GridPane.rowIndex="2">
                <content>
-                  <VBox alignment="TOP_CENTER" prefHeight="679.0" prefWidth="288.0" spacing="10.0" style="-fx-background-color: #007ea7;">
+                  <VBox fx:id="pvsVbox" alignment="TOP_CENTER" prefHeight="679.0" prefWidth="288.0" spacing="10.0" style="-fx-background-color: #007ea7;">
                      <opaqueInsets>
                         <Insets right="20.0" />
                      </opaqueInsets>
@@ -107,7 +107,7 @@
                <children>
                   <HBox alignment="CENTER" prefHeight="58.0" prefWidth="81.0" GridPane.columnIndex="1">
                      <children>
-                        <ImageView fitHeight="44.0" fitWidth="59.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="44.0" fitWidth="59.0" onMouseClicked="#selectFollowersNewPv" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/alien.png" />
                            </image>
@@ -116,7 +116,7 @@
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <ImageView fitHeight="42.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="42.0" fitWidth="82.0" onMouseClicked="#newPv" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/add.png" />
                            </image>
@@ -136,7 +136,7 @@
                <children>
                   <HBox alignment="CENTER" prefHeight="54.0" prefWidth="114.0">
                      <children>
-                        <ImageView fitHeight="28.0" fitWidth="38.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="28.0" fitWidth="38.0" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#searchPv" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/zoom.png" />
                            </image>
@@ -146,7 +146,7 @@
                         </ImageView>
                      </children>
                   </HBox>
-                  <TextField prefHeight="26.0" prefWidth="213.0" promptText="Search Id" style="-fx-background-color: #007ea7;" GridPane.columnIndex="1">
+                  <TextField fx:id="searchIdTextField" prefHeight="26.0" prefWidth="213.0" promptText="Search Id" style="-fx-background-color: #007ea7;" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
@@ -179,7 +179,7 @@
                <children>
                   <HBox alignment="CENTER" prefHeight="85.0" prefWidth="87.0">
                      <children>
-                        <ImageView fitHeight="61.0" fitWidth="55.0" onDragDetected="#maximize" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="61.0" fitWidth="55.0" onMouseClicked="#maximize" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/menu_bars.png" />
                            </image>
@@ -239,7 +239,7 @@
                      <children>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="3">
                            <children>
-                              <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="40.0" fitWidth="40.0" onMouseClicked="#visibleSearchInPv" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/zoom.png" />
                                  </image>
@@ -248,7 +248,7 @@
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
                            <children>
-                              <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="40.0" fitWidth="40.0" onMouseClicked="#BlockUser" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/block.png" />
                                  </image>
@@ -257,7 +257,7 @@
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                            <children>
-                              <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="40.0" fitWidth="40.0" onMouseClicked="#VisitPage" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/home.png" />
                                  </image>
@@ -280,21 +280,21 @@
                <children>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
                      <children>
-                        <ImageView fitHeight="40.0" fitWidth="114.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="40.0" fitWidth="114.0" onMouseClicked="#sendMessage" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/send.png" />
                            </image>
                         </ImageView>
                      </children>
                   </HBox>
-                  <TextArea prefHeight="26.0" prefWidth="438.0" GridPane.columnIndex="1">
+                  <TextArea fx:id="messageTextArea" prefHeight="26.0" prefWidth="438.0" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </GridPane.margin>
                   </TextArea>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <ImageView fitHeight="41.0" fitWidth="83.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="41.0" fitWidth="83.0" onMouseClicked="#selectPhotoMessage" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/clip2.png" />
                            </image>
@@ -303,25 +303,53 @@
                   </HBox>
                </children>
             </GridPane>
+            <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" rotate="180.0" GridPane.rowIndex="2">
+               <content>
+                  <VBox fx:id="reverseVboxForSendMessage" prefHeight="729.0" prefWidth="610.0" spacing="25.0" style="-fx-background-color: #013dc4;" />
+               </content>
+            </ScrollPane>
             <GridPane style="-fx-background-color: #00a8e8;" GridPane.rowIndex="1">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.20001220703125" minWidth="10.0" percentWidth="10.0" prefWidth="104.59998321533203" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="341.40001678466797" minWidth="10.0" percentWidth="90.0" prefWidth="341.40001678466797" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.20001220703125" minWidth="10.0" percentWidth="15.0" prefWidth="104.59998321533203" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="341.40001678466797" minWidth="10.0" percentWidth="85.0" prefWidth="341.40001678466797" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <HBox alignment="CENTER" prefHeight="54.0" prefWidth="114.0">
+                  <HBox alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="54.0" prefWidth="114.0">
                      <children>
-                        <ImageView fitHeight="28.0" fitWidth="38.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="28.0" fitWidth="38.0" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#serchWordInPv" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/zoom.png" />
                            </image>
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
+                           <HBox.margin>
+                              <Insets left="7.0" />
+                           </HBox.margin>
                         </ImageView>
+                        <Label fx:id="searchIndex" prefHeight="18.0" prefWidth="18.0" text="(0)">
+                           <HBox.margin>
+                              <Insets left="5.0" />
+                           </HBox.margin>
+                        </Label>
+                        <VBox alignment="CENTER" prefHeight="30.0" prefWidth="18.0">
+                           <children>
+                              <ImageView fx:id="nextSearchIndex" fitHeight="15.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../images/arrowhead_left.png" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fx:id="backIndexSearch" fitHeight="15.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../images/arrowhead_down.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </VBox>
+                        <Label fx:id="searchTotalFind" prefHeight="18.0" prefWidth="16.0" text="(0)" />
                      </children>
                   </HBox>
                   <TextField prefHeight="26.0" prefWidth="213.0" promptText="Search Id" style="-fx-background-color: #007ea7;" GridPane.columnIndex="1">
@@ -331,11 +359,6 @@
                   </TextField>
                </children>
             </GridPane>
-            <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" rotate="180.0" GridPane.rowIndex="2">
-               <content>
-                  <VBox prefHeight="650.0" prefWidth="610.0" spacing="25.0" style="-fx-background-color: #013dc4;" />
-               </content>
-            </ScrollPane>
          </children>
       </GridPane>
    </children>
