--- a/src/main/resources/fxml/PvsPage.fxml
+++ b/src/main/resources/fxml/PvsPage.fxml
@@ -25,7 +25,7 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <GridPane style="-fx-background-color: pink;">
+      <GridPane style="-fx-background-color: black;">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
@@ -98,47 +98,18 @@
             <GridPane style="-fx-background-color: #003459;" GridPane.rowIndex="3">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="21.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="60.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="20.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <HBox alignment="CENTER" prefHeight="58.0" prefWidth="81.0" GridPane.columnIndex="1">
+                  <HBox alignment="CENTER" prefHeight="58.0" prefWidth="81.0" GridPane.columnIndex="2">
                      <children>
                         <ImageView fitHeight="44.0" fitWidth="59.0" onMouseClicked="#selectFollowersNewPv" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/alien.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <ImageView fitHeight="42.0" fitWidth="82.0" onMouseClicked="#newPv" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/add.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </HBox>
-               </children>
-            </GridPane>
-            <GridPane style="-fx-background-color: #00a8e8;" GridPane.rowIndex="1">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.20001220703125" minWidth="10.0" percentWidth="10.0" prefWidth="104.59998321533203" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="341.40001678466797" minWidth="10.0" percentWidth="90.0" prefWidth="341.40001678466797" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <HBox alignment="CENTER" prefHeight="54.0" prefWidth="114.0">
-                     <children>
-                        <ImageView fitHeight="28.0" fitWidth="38.0" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#searchPv" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/zoom.png" />
                            </image>
                            <cursor>
                               <Cursor fx:constant="HAND" />
@@ -146,11 +117,46 @@
                         </ImageView>
                      </children>
                   </HBox>
-                  <TextField fx:id="searchIdTextField" prefHeight="26.0" prefWidth="213.0" promptText="Search Id" style="-fx-background-color: #007ea7;" GridPane.columnIndex="1">
-                     <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin>
-                  </TextField>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <ImageView fx:id="plusPv" fitHeight="42.0" fitWidth="82.0" onMouseClicked="#newPv" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/add.png" />
+                           </image>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </ImageView>
+                     </children>
+                  </HBox>
+                  <GridPane fx:id="searchUser" style="-fx-background-color: #003459;" GridPane.columnIndex="1">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.20001220703125" minWidth="10.0" percentWidth="21.0" prefWidth="104.59998321533203" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="341.40001678466797" minWidth="10.0" percentWidth="90.0" prefWidth="341.40001678466797" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <HBox alignment="CENTER" prefHeight="54.0" prefWidth="114.0">
+                           <children>
+                              <ImageView fitHeight="28.0" fitWidth="38.0" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#searchPv" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../images/zoom.png" />
+                                 </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
+                              </ImageView>
+                           </children>
+                        </HBox>
+                        <TextField fx:id="searchIdTextField" prefHeight="26.0" prefWidth="144.0" promptText="Search Id" style="-fx-background-color: #007ea7;" GridPane.columnIndex="1">
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </TextField>
+                     </children>
+                  </GridPane>
                </children>
             </GridPane>
          </children>
@@ -166,6 +172,11 @@
           <RowConstraints minHeight="10.0" percentHeight="7.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
+            <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" rotate="180.0" GridPane.rowIndex="2">
+               <content>
+                  <VBox fx:id="reverseVboxForSendMessage" prefHeight="729.0" prefWidth="610.0" spacing="25.0" style="-fx-background-color: #013dc4;" />
+               </content>
+            </ScrollPane>
             <GridPane style="-fx-background-color: #ffb703;">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="9.0" prefWidth="100.0" />
@@ -191,7 +202,7 @@
                   </HBox>
                   <HBox alignment="CENTER_RIGHT" prefHeight="74.0" prefWidth="130.0" GridPane.columnIndex="1">
                      <children>
-                        <Circle fill="#ffd662" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
+                        <Circle fx:id="pvPhoto" fill="#ffd662" radius="32.0" stroke="BLACK" strokeType="INSIDE" />
                      </children>
                   </HBox>
                   <GridPane GridPane.columnIndex="2">
@@ -205,7 +216,7 @@
                      <children>
                         <HBox prefHeight="100.0" prefWidth="200.0">
                            <children>
-                              <Label prefHeight="68.0" prefWidth="279.0" text="name">
+                              <Label fx:id="pvName" prefHeight="68.0" prefWidth="279.0" text="name">
                                  <padding>
                                     <Insets left="20.0" />
                                  </padding>
@@ -217,7 +228,7 @@
                         </HBox>
                         <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
                            <children>
-                              <Label prefHeight="74.0" prefWidth="270.0" text="Id">
+                              <Label fx:id="pvId" prefHeight="74.0" prefWidth="270.0" text="Id">
                                  <padding>
                                     <Insets left="20.0" />
                                  </padding>
@@ -242,19 +253,25 @@
                      <children>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="3">
                            <children>
-                              <ImageView fitHeight="40.0" fitWidth="40.0" onMouseClicked="#visibleSearchInPv" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="zarebbin" fitHeight="40.0" fitWidth="40.0" onMouseClicked="#visibleSearchInPv" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/zoom.png" />
                                  </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
                               </ImageView>
                            </children>
                         </HBox>
                         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
                            <children>
-                              <ImageView fitHeight="40.0" fitWidth="40.0" onMouseClicked="#BlockUser" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="block" fitHeight="40.0" fitWidth="40.0" onMouseClicked="#BlockUser" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/block.png" />
                                  </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
                               </ImageView>
                            </children>
                         </HBox>
@@ -264,6 +281,9 @@
                                  <image>
                                     <Image url="@../images/home.png" />
                                  </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
                               </ImageView>
                            </children>
                         </HBox>
@@ -287,6 +307,9 @@
                            <image>
                               <Image url="@../images/send.png" />
                            </image>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </ImageView>
                      </children>
                   </HBox>
@@ -306,12 +329,7 @@
                   </HBox>
                </children>
             </GridPane>
-            <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" rotate="180.0" GridPane.rowIndex="2">
-               <content>
-                  <VBox fx:id="reverseVboxForSendMessage" prefHeight="729.0" prefWidth="610.0" spacing="25.0" style="-fx-background-color: #013dc4;" />
-               </content>
-            </ScrollPane>
-            <GridPane style="-fx-background-color: #00a8e8;" GridPane.rowIndex="1">
+            <GridPane fx:id="searchInPvGridPane" style="-fx-background-color: #00a8e8;" GridPane.rowIndex="1">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.20001220703125" minWidth="10.0" percentWidth="15.0" prefWidth="104.59998321533203" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="341.40001678466797" minWidth="10.0" percentWidth="85.0" prefWidth="341.40001678466797" />
@@ -322,7 +340,7 @@
                <children>
                   <HBox alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="54.0" prefWidth="114.0">
                      <children>
-                        <ImageView fitHeight="28.0" fitWidth="38.0" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#serchWordInPv" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="28.0" fitWidth="38.0" nodeOrientation="RIGHT_TO_LEFT" onMouseClicked="#searchWordInPv" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../images/zoom.png" />
                            </image>
@@ -340,22 +358,28 @@
                         </Label>
                         <VBox alignment="CENTER" prefHeight="30.0" prefWidth="18.0">
                            <children>
-                              <ImageView fx:id="nextSearchIndex" fitHeight="15.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="nextSearchIndex" fitHeight="15.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
                                  <image>
                                     <Image url="@../images/arrowhead_left.png" />
                                  </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
                               </ImageView>
                               <ImageView fx:id="backIndexSearch" fitHeight="15.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/arrowhead_down.png" />
                                  </image>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
                               </ImageView>
                            </children>
                         </VBox>
                         <Label fx:id="searchTotalFind" prefHeight="18.0" prefWidth="16.0" text="(0)" />
                      </children>
                   </HBox>
-                  <TextField prefHeight="26.0" prefWidth="213.0" promptText="Search Id" style="-fx-background-color: #007ea7;" GridPane.columnIndex="1">
+                  <TextField fx:id="searchInPvTextField" prefHeight="26.0" prefWidth="213.0" promptText="Search Id" style="-fx-background-color: #007ea7;" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
