show Following And Followers And Another Page

--- a/src/main/resources/fxml/AnotherMessageBox.fxml
+++ b/src/main/resources/fxml/AnotherMessageBox.fxml
@@ -85,6 +85,9 @@
                            <padding>
                               <Insets bottom="1.0" left="10.0" />
                            </padding>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </Label>
                      </children>
                      <opaqueInsets>
